--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
   <div id="carouselExampleInterval" class="carousel slide container mt-3" data-bs-ride="carousel">
     <!--<div id="carousel-home" class="fullwidth-elment" data-bs-ride="carousel">-->
     <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="3000">
+      <div class="carousel-item active" data-bs-interval="2000">
         <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
       </div>
-      <div class="carousel-item" data-bs-interval="3000">
+      <div class="carousel-item" data-bs-interval="2000">
         <img src="./img/LosMolles68.jpg" class="d-block w-100" alt="banner 2">
       </div>
-      <div class="carousel-item">
+      <div class="carousel-item" data-bs-interval="2000">
         <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
       </div>
     </div>
@@ -70,8 +70,7 @@
 
     <section class="imagenes container">
       <article class="bloque">
-
-        <a href="./img/LosMolles4.jpg" target="_blank">
+        <a href="./img/LosMolles4.jpg" target="_blank" data-aos="flip-right">
           <img src="./img/LosMolles4.jpg" alt="Naturaleza">
         </a>
         <a href="./img/NautilusLaTravesia112.jpg" target="_blank">
@@ -110,6 +109,7 @@
 
       </article>
     </section>
+
   </main>
 
 
@@ -143,6 +143,7 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
     crossorigin="anonymous"></script>
+
 </body>
 
 </html>
