--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -9,6 +9,7 @@
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/stylo.css">
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <title>Acerca de mí</title>
 </head>
 
@@ -36,37 +37,64 @@
         </nav>
     </header>
 
+    <div class="cont_foto" data-aos="zoom-in">
+        <img class="mi_foto" src="../img/foto..jpg" alt="Foto" height="100px" width="100px">
+    </div>
+
+    <main class="container">
+        <p>¡Hola a todos!
+
+            Soy Alexis Muñoz Concha, un apasionado de la fotografía que encuentra en cada imagen la oportunidad de
+            contar una
+            historia. Soy un verdadero amante de los atardeceres, esos momentos mágicos en los que el sol pinta el cielo
+            con sus tonos dorados, y me encanta capturar esa efímera belleza que nos entrega la naturaleza.
+
+            Me encanta compartir experiencias, anécdotas y aprendizajes con aquellos que comparten mi pasión por descubrir la magia en cada momento.
+
+            Además de la fotografía, encuentro mi paz y liberación nadando, donde me sumerjo en la
+            inmensidad del mar. El invierno y la lluvia no son obstáculos para mí, sino oportunidades para explorar la
+            belleza que se esconde en la melancolía de los días grises.
+
+            Porteño de corazón, una urbe llena de contrastes, colores y vida.
+
+            Les comparto mi humilde visión a través de mis fotografías y de conectarme con personas
+            que, al igual que yo, encuentran la belleza en los pequeños detalles y en cada instante capturado.</p>
+    </main>
 
 
 
-            <hr>
+    <hr>
 
-            <footer class="footer">
+    <footer class="footer">
 
-                <div class="redes">
-                    <a class="facebook" href="https://www.flickr.com/" target="_blank">
-                        <!--Target su función es que al momento de clickear nos abre otra pestaña-->
-                        <i class="fa-brands fa-flickr"></i>
-                    </a>
+        <div class="redes">
+            <a class="facebook" href="https://www.flickr.com/" target="_blank">
+                <!--Target su función es que al momento de clickear nos abre otra pestaña-->
+                <i class="fa-brands fa-flickr"></i>
+            </a>
 
-                    <a class="instagram" href="https://www.instagram.com/alexisimc/" target="_blank">
-                        <i class="fa-brands fa-instagram"></i>
-                    </a>
+            <a class="instagram" href="https://www.instagram.com/alexisimc/" target="_blank">
+                <i class="fa-brands fa-instagram"></i>
+            </a>
 
-                    <a class="whatsapp" href="https://www.whatsapp.com/" target="_blank">
-                        <i class="fa-brands fa-whatsapp"></i>
-                    </a>
-                </div>
+            <a class="whatsapp" href="https://www.whatsapp.com/" target="_blank">
+                <i class="fa-brands fa-whatsapp"></i>
+            </a>
+        </div>
 
-                <p class="copy">Copyright todos los derechos reservados</p>
+        <p class="copy">Copyright todos los derechos reservados</p>
 
-            </footer>
+    </footer>
 
-            <script src="https://kit.fontawesome.com/7b371c7c25.js" crossorigin="anonymous"></script>
-            <!--Pág de iconos-->
-            <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-                integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-                crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/7b371c7c25.js" crossorigin="anonymous"></script>
+    <!--Pág de iconos-->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+        crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
