Se elimina el html tienda del proyecto

--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -29,7 +29,6 @@
                         <a class="nav-link active m-5" aria-current="page"
                             href="../pages/portafolio.html">Portafolio</a>
                         <a class="nav-link active m-5" href="../pages/acerca_de_mi.html">Acerca de Mi</a>
-                        <a class="nav-link active m-5" href="../pages/tienda.html">Tienda</a>
                         <a class="nav-link active m-5" href="../pages/contacto.html">Contacto</a>
                     </div>
                 </div>
@@ -57,7 +56,7 @@
 
             Porteño de corazón, una urbe llena de contrastes, colores y vida.
 
-            Les comparto mi humilde visión a través de mis fotografías y de conectarme con personas
+            Les comparto mi visión a través de mis fotografías y de conectarme con personas
             que, al igual que yo, encuentran la belleza en los pequeños detalles y en cada instante capturado.</p>
     </main>
 
