--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -32,7 +32,6 @@
     </nav>
   </header>
 
-  <!--seccion main  -->
   <main>
     <!--<h1>Fotos Destacadas</h1>-->
     <div class=" titulo container text-center">
@@ -43,73 +42,72 @@
         te invitamos a detenerte, a observar y a apreciar la maravillosa creación de la naturaleza y la riqueza de la
         expresión humana.</small>
     </div>
-
-    <main>
-      <section>
-        <!-- Sección galería de fotos -->
-        <div class="galeria container justify-content-center">
-          <div class="foto">
-            <a href="atardeceres_magicos.html"> <!--Futuro Enlace a la galería de Atardeceres Mágicos-->
-              <img src="../img/LosMolles68.jpg" alt="Foto">
-              <div class="overlay">
-                <h3>Atardeceres Mágicos</h3>
-              </div>
-            </a>
+  </main>
+  <section>
+    <!-- Sección galería de fotos -->
+    <div class="galeria container justify-content-center">
+      <div class="foto">
+        <a href="../pages_portafolio/atardeceres_magicos.html"> <!--Futuro Enlace a la galería de Atardeceres Mágicos-->
+          <img src="../img/LosMolles68.jpg" alt="Foto">
+          <div class="overlay">
+            <h3>Atardeceres Mágicos</h3>
           </div>
-          <div class="foto">
-            <a href="viaje_a_lo_desconocido.html"> <!-- Futuro Enlace a la galería de viaje a lo desconocido-->
-              <img src="../img/LosMolles49.jpg" alt="Foto">
-              <div class="overlay">
-                <h3>Un Viaje a lo Desconocido</h3>
-              </div>
-            </a>
+        </a>
+      </div>
+      <div class="foto">
+        <a href="../pages_portafolio/viaje_a_lo_desconocido.html"> <!-- Futuro Enlace a la galería de viaje a lo desconocido-->
+          <img src="../img/LosMolles49.jpg" alt="Foto">
+          <div class="overlay">
+            <h3>Un Viaje a lo Desconocido</h3>
           </div>
-          <div class="foto">
-            <a href="colores_naturaleza.html"> <!-- Futuro Enlace a la galería de colores naturaleza-->
-              <img src="../img/LosMolles4.jpg" alt="Foto">
-              <div class="overlay">
-                <h3>Los Colores de la Naturaleza</h3>
-              </div>
-            </a>
+        </a>
+      </div>
+      <div class="foto">
+        <a href="../pages_portafolio/colores_naturaleza.html"> <!-- Futuro Enlace a la galería de colores naturaleza-->
+          <img src="../img/LosMolles4.jpg" alt="Foto">
+          <div class="overlay">
+            <h3>Los Colores de la Naturaleza</h3>
           </div>
-          <div class="foto">
-            <a href="retratos.html"> <!-- Futuro Enlace a la galería de retratos-->
-              <img src="../img/LosMolles41.jpg" alt="Foto">
-              <div class="overlay">
-                <h3>Retratos con Alma</h3>
-              </div>
-            </a>
+        </a>
+      </div>
+      <div class="foto">
+        <a href="../pages_portafolio/retratos.html"> <!-- Futuro Enlace a la galería de retratos-->
+          <img src="../img/LosMolles41.jpg" alt="Foto">
+          <div class="overlay">
+            <h3>Retratos con Alma</h3>
           </div>
-        </div>
-      </section>
+        </a>
+      </div>
+    </div>
+  </section>
 
-      <hr>
+  <hr>
 
-      <footer class="footer">
+  <footer class="footer">
 
-        <div class="redes">
-          <a class="facebook" href="https://www.flickr.com/" target="_blank">
-            <!--Target su función es que al momento de clickear nos abre otra pestaña-->
-            <i class="fa-brands fa-flickr"></i>
-          </a>
+    <div class="redes">
+      <a class="facebook" href="https://www.flickr.com/" target="_blank">
+        <!--Target su función es que al momento de clickear nos abre otra pestaña-->
+        <i class="fa-brands fa-flickr"></i>
+      </a>
 
-          <a class="instagram" href="https://www.instagram.com/alexisimc/" target="_blank">
-            <i class="fa-brands fa-instagram"></i>
-          </a>
+      <a class="instagram" href="https://www.instagram.com/alexisimc/" target="_blank">
+        <i class="fa-brands fa-instagram"></i>
+      </a>
 
-          <a class="whatsapp" href="https://www.whatsapp.com/" target="_blank">
-            <i class="fa-brands fa-whatsapp"></i>
-          </a>
-        </div>
+      <a class="whatsapp" href="https://www.whatsapp.com/" target="_blank">
+        <i class="fa-brands fa-whatsapp"></i>
+      </a>
+    </div>
 
-        <p class="copy">Copyright todos los derechos reservados</p>
+    <p class="copy">Copyright todos los derechos reservados</p>
 
-      </footer>
+  </footer>
 
-      <script src="https://kit.fontawesome.com/7b371c7c25.js" crossorigin="anonymous"></script><!--Pág de iconos-->
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
-        crossorigin="anonymous"></script>
+  <script src="https://kit.fontawesome.com/7b371c7c25.js" crossorigin="anonymous"></script><!--Pág de iconos-->
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL"
+    crossorigin="anonymous"></script>
 </body>
 
 </html>
