Se modifica presentacion personal

--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -43,7 +43,7 @@
     <main class="container">
         <p>¡Hola a todos!
 
-            Soy Alexis Muñoz Concha, un apasionado de la fotografía que encuentra en cada imagen la oportunidad de
+            Soy Alexis Muñoz, un apasionado de la fotografía que encuentra en cada imagen la oportunidad de
             contar una
             historia. Soy un verdadero amante de los atardeceres, esos momentos mágicos en los que el sol pinta el cielo
             con sus tonos dorados, y me encanta capturar esa efímera belleza que nos entrega la naturaleza.
