--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -50,7 +50,7 @@
         <!-- Sección galería de fotos -->
         <div class="galeria container justify-content-center">
           <div class="foto">
-            <a href="atardeceres_magicos.html"> <!--Futuro Enlace a la galería de Atardeceres Mágicos-->
+            <a href="../pages_portafolio/atardeceres_magicos.html"> <!--Futuro Enlace a la galería de Atardeceres Mágicos-->
               <img src="../img/LosMolles68.jpg" alt="Foto">
               <div class="overlay">
                 <h3>Atardeceres Mágicos</h3>
@@ -58,7 +58,7 @@
             </a>
           </div>
           <div class="foto">
-            <a href="viaje_a_lo_desconocido.html"> <!-- Futuro Enlace a la galería de viaje a lo desconocido-->
+            <a href="../pages_portafolio/viaje_a_lo_desconocido.html"> <!-- Futuro Enlace a la galería de viaje a lo desconocido-->
               <img src="../img/LosMolles49.jpg" alt="Foto">
               <div class="overlay">
                 <h3>Un Viaje a lo Desconocido</h3>
@@ -66,7 +66,7 @@
             </a>
           </div>
           <div class="foto">
-            <a href="colores_naturaleza.html"> <!-- Futuro Enlace a la galería de colores naturaleza-->
+            <a href="../pages_portafolio/colores-naturaleza.html"> <!-- Futuro Enlace a la galería de colores naturaleza-->
               <img src="../img/LosMolles4.jpg" alt="Foto">
               <div class="overlay">
                 <h3>Los Colores de la Naturaleza</h3>
@@ -74,7 +74,7 @@
             </a>
           </div>
           <div class="foto">
-            <a href="retratos.html"> <!-- Futuro Enlace a la galería de retratos-->
+            <a href="../pages_portafolio/retratos.html"> <!-- Futuro Enlace a la galería de retratos-->
               <img src="../img/LosMolles41.jpg" alt="Foto">
               <div class="overlay">
                 <h3>Retratos con Alma</h3>
