--- a/pages_portafolio/colores_naturaleza.html
+++ b/pages_portafolio/colores_naturaleza.html
@@ -37,7 +37,7 @@
 
     <main>
         <div class=" titulo container text-center">
-            <h3>Viaje a lo desconocido</h3>
+            <h3>Los colores de la naturaleza </h3>
             <small class="text-body-secondary text-center">Los verdes vívidos de los bosques, los azules profundos de
                 los océanos y los tonos cálidos de los atardeceres son una paleta de colores. Cada matiz se fusiona en
                 una sinfonía visual que te invita a explorar el mundo
