Se agregan reseñas a los html del portafolio

--- a/pages_portafolio/colores-naturaleza.html
+++ b/pages_portafolio/colores-naturaleza.html
@@ -39,15 +39,11 @@
     <main>
         <!--<h1>Fotos Destacadas</h1>-->
         <div class=" titulo container text-center">
-            <h3>Un Viaje a Través de la Fotografía</h3>
-            <small class="text-body-secondary text-center">En nuestro mundo acelerado, a menudo pasamos por alto la
-                asombrosa
-                belleza que el mundo nos rodea, así como la profundidad de las emociones nos entrega. A través de
-                nuestra
-                cámara,
-                te invitamos a detenerte, a observar y a apreciar la maravillosa creación de la naturaleza y la riqueza
-                de la
-                expresión humana.</small>
+            <h3>Los Colores de la Naturaleza</h3>
+            <small class="text-body-secondary text-center">Los verdes vívidos de los bosques, los azules profundos de
+                los océanos y los tonos cálidos de los atardeceres son una paleta de colores. Cada matiz se fusiona en
+                una sinfonía visual que te invita a explorar el mundo natural y humano a través de nuestros
+                ojos.</small>
         </div>
 
 
