Se instala sass, se crea carpetas scss

--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -64,7 +64,7 @@
 
     <hr>
 
-    <footer class="footer">
+    <footer class="footer container">
 
         <div class="redes">
             <a class="facebook" href="https://www.flickr.com/" target="_blank">
