--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
   <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
   <title>Inicio</title>
   <link rel="stylesheet" href="./css/stylo.css">
+  
 </head>
 
 <body>
@@ -35,7 +36,6 @@
 
   <!--Carousel-->
   <div id="carouselExampleInterval" class="carousel slide container mt-3" data-bs-ride="carousel">
-    <!--<div id="carousel-home" class="fullwidth-elment" data-bs-ride="carousel">-->
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="2000">
         <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
@@ -116,7 +116,7 @@
 
   <hr>
   <!--Footer-->
-  <footer class="footer">
+  <footer class="footer container">
 
     <div class="redes">
       <a class="facebook" href="https://www.flickr.com/" target="_blank">
