--- a/pages_portafolio/retratos.html
+++ b/pages_portafolio/retratos.html
@@ -48,7 +48,7 @@
 
     <hr>
 
-    <footer class="footer">
+    <footer class="footer container">
 
         <div class="redes">
             <a class="facebook" href="https://www.flickr.com/" target="_blank">
