--- a/pages_portafolio/viaje_a_lo_desconocido.html
+++ b/pages_portafolio/viaje_a_lo_desconocido.html
@@ -45,7 +45,7 @@
 
     <hr>
 
-    <footer class="footer">
+    <footer class="footer container">
 
         <div class="redes">
             <a class="facebook" href="https://www.flickr.com/" target="_blank">
