Se realiza la migración de los stylos a home

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
   <title>Inicio</title>
-  <link rel="stylesheet" href="./css/stylo.css">
+  <link rel="stylesheet" href="./css/style.css">
   
 </head>
 
@@ -59,12 +59,10 @@
 
   <!--seccion main  -->
   <main>
-    <!--<h1>Fotos Destacadas</h1>-->
     <div class=" titulo container">
       <h3> Fotos Destacadas</h3>
       <small class="text-body-secondary text-center">"Un Paseo a Través de la Naturaleza y el Alma Humana: Instantes
-        Inolvidables
-        Capturados"</small>
+        Inolvidables Capturados"</small>
     </div>
 
     <section class="imagenes container">
