--- a/pages_portafolio/viaje_a_lo_desconocido.html
+++ b/pages_portafolio/viaje_a_lo_desconocido.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
-    <link rel="stylesheet" href="../css/stylo.css">
-    <title>Portafolio</title>
+    <link rel="stylesheet" href="../css/style.css">
+    <title>Viaje_a_lo_desconocido</title>
 </head>
 
 <body>
