Se agregan los stylos a contacto, acerca de mi y portafolio

--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -33,21 +33,18 @@
   </header>
 
   <main>
-    <!--<h1>Fotos Destacadas</h1>-->
     <div class=" titulo container text-center">
       <h3>Un Viaje a Través de la Fotografía</h3>
       <small class="text-body-secondary text-center">En nuestro mundo acelerado, a menudo pasamos por alto la asombrosa
         belleza que el mundo nos rodea, así como la profundidad de las emociones nos entrega. A través de nuestra
-        cámara,
-        te invitamos a detenerte, a observar y a apreciar la maravillosa creación de la naturaleza y la riqueza de la
+        cámara, te invitamos a detenerte, a observar y a apreciar la maravillosa creación de la naturaleza y la riqueza de la
         expresión humana.</small>
     </div>
   </main>
   <section>
-    <!-- Sección galería de fotos -->
     <div class="galeria container justify-content-center">
       <div class="foto">
-        <a href="../pages_portafolio/atardeceres_magicos.html"> <!--Futuro Enlace a la galería de Atardeceres Mágicos-->
+        <a href="../pages_portafolio/atardeceres_magicos.html"> 
           <img src="../img/LosMolles68.jpg" alt="Foto">
           <div class="overlay">
             <h3>Atardeceres Mágicos</h3>
@@ -55,7 +52,7 @@
         </a>
       </div>
       <div class="foto">
-        <a href="../pages_portafolio/viaje_a_lo_desconocido.html"> <!-- Futuro Enlace a la galería de viaje a lo desconocido-->
+        <a href="../pages_portafolio/viaje_a_lo_desconocido.html"> 
           <img src="../img/LosMolles49.jpg" alt="Foto">
           <div class="overlay">
             <h3>Un Viaje a lo Desconocido</h3>
@@ -63,7 +60,7 @@
         </a>
       </div>
       <div class="foto">
-        <a href="../pages_portafolio/colores_naturaleza.html"> <!-- Futuro Enlace a la galería de colores naturaleza-->
+        <a href="../pages_portafolio/colores_naturaleza.html"> 
           <img src="../img/LosMolles4.jpg" alt="Foto">
           <div class="overlay">
             <h3>Los Colores de la Naturaleza</h3>
@@ -71,7 +68,7 @@
         </a>
       </div>
       <div class="foto">
-        <a href="../pages_portafolio/retratos.html"> <!-- Futuro Enlace a la galería de retratos-->
+        <a href="../pages_portafolio/retratos.html"> 
           <img src="../img/LosMolles41.jpg" alt="Foto">
           <div class="overlay">
             <h3>Retratos con Alma</h3>
