--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -16,7 +16,7 @@
     <header>
         <nav class="navbar navbar-expand-lg">
             <div class="container">
-                <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/camara.jpeg"
+                <a class="navbar-brand" href="../index.html"><img class="logo" src="../img/logo3.png"
                         alt="Logo cámara"></a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false"
