Se modifica color del footer y se modifica aspecto de img del portafolio

--- a/pages_portafolio/atardeceres_magicos.html
+++ b/pages_portafolio/atardeceres_magicos.html
@@ -37,12 +37,12 @@
 
     <main>
         <div class=" titulo container text-center">
-          <h3>Atardeceres Mágicos</h3>
-          <small class="text-body-secondary text-center">Cada día, el sol se despide en un despliegue de colores cálidos y suaves. Es
-            un homenaje a esos momentos mágicos cuando el cielo nos entrega sus arreboles. Las puestas de sol son
-            nuestro lienzo, y cada fotografía es un cuadro que te transportará a un mundo de tranquilidad.</small>
+            <h3>Atardeceres Mágicos</h3>
+            <small class="text-body-secondary text-center">Cada día, el sol se despide en un despliegue de colores
+                cálidos y suaves. Es un homenaje a esos momentos mágicos cuando el cielo nos entrega sus arreboles. Las puestas de sol son
+                nuestro lienzo, y cada fotografía es un cuadro que te transportará a un mundo de tranquilidad.</small>
         </div>
-      </main>
+    </main>
 
 
     <hr>
