Se cambia foto de perfil, se ajusta media query y se agregan fotos

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
   <title>Inicio</title>
   <link rel="stylesheet" href="./css/style.css">
-  
+
 </head>
 
 <body>
@@ -66,8 +66,8 @@
     </div>
 
     <section class="imagenes container">
-      <article class="bloque">
-        <a href="./img/LosMolles4.jpg" target="_blank" data-aos="flip-right">
+      <article class="bloque" >
+        <a href="./img/LosMolles4.jpg" target="_blank">
           <img src="./img/LosMolles4.jpg" alt="Naturaleza">
         </a>
         <a href="./img/NautilusLaTravesia112.jpg" target="_blank">
@@ -108,9 +108,6 @@
     </section>
 
   </main>
-
-
-
 
   <hr>
   <!--Footer-->
