--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -37,7 +37,7 @@
     </header>
 
     <div class="cont_foto" data-aos="zoom-in">
-        <img class="mi_foto" src="../img/foto..jpg" alt="Foto" height="100px" width="100px">
+        <img class="mi_foto" src="../img_portafolio/Lonquimay2023-37.jpg" alt="Foto">
     </div>
 
     <main class="container">
@@ -48,7 +48,8 @@
             historia. Soy un verdadero amante de los atardeceres, esos momentos mágicos en los que el sol pinta el cielo
             con sus tonos dorados, y me encanta capturar esa efímera belleza que nos entrega la naturaleza.
 
-            Me encanta compartir experiencias, anécdotas y aprendizajes con aquellos que comparten mi pasión por descubrir la magia en cada momento.
+            Me encanta compartir experiencias, anécdotas y aprendizajes con aquellos que comparten mi pasión por
+            descubrir la magia en cada momento.
 
             Además de la fotografía, encuentro mi paz y liberación nadando, donde me sumerjo en la
             inmensidad del mar. El invierno y la lluvia no son obstáculos para mí, sino oportunidades para explorar la
