--- a/pages_portafolio/atardeceres_magicos.html
+++ b/pages_portafolio/atardeceres_magicos.html
@@ -39,11 +39,24 @@
         <div class=" titulo container text-center">
             <h3>Atardeceres Mágicos</h3>
             <small class="text-body-secondary text-center">Cada día, el sol se despide en un despliegue de colores
-                cálidos y suaves. Es un homenaje a esos momentos mágicos cuando el cielo nos entrega sus arreboles. Las puestas de sol son
+                cálidos y suaves. Es un homenaje a esos momentos mágicos cuando el cielo nos entrega sus arreboles. Las
+                puestas de sol son
                 nuestro lienzo, y cada fotografía es un cuadro que te transportará a un mundo de tranquilidad.</small>
         </div>
     </main>
 
+    <section class="imagenes container">
+        <article class="bloque">
+            <a href="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" target="_blank">
+                <img src="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" alt="Naturaleza">
+            </a>
+            <a href="../img_portafolio/ElTebo2023-21.jpg" target="_blank">
+                <img src="../img_portafolio/ElTebo2023-21.jpg" alt="Viaje">
+            </a>
+
+
+        </article>
+    </section>
 
     <hr>
 
