--- a/pages_portafolio/colores_naturaleza.html
+++ b/pages_portafolio/colores_naturaleza.html
@@ -46,6 +46,19 @@
         </div>
     </main>
 
+    <section class="imagenes container">
+        <article class="bloque">
+            <a href="../img_portafolio/Lonquimay2023CN-22.jpg" target="_blank">
+                <img src="../img_portafolio/Lonquimay2023CN-22.jpg" alt="Naturaleza">
+            </a>
+            <a href="../img_portafolio/Lonquimay2023CN-91.jpg" target="_blank">
+                <img src="../img_portafolio/Lonquimay2023CN-91.jpg" alt="Viaje">
+            </a>
+
+
+        </article>
+    </section>
+
     <hr>
 
     <footer class="footer container">
