--- a/pages_portafolio/retratos.html
+++ b/pages_portafolio/retratos.html
@@ -45,6 +45,19 @@
         </div>
     </main>
 
+    <section class="imagenes container">
+        <article class="bloque">
+            <a href="../img_portafolio/Lonquimay2023Retrato-47.jpg" target="_blank">
+                <img src="../img_portafolio/Lonquimay2023Retrato-47.jpg" alt="Naturaleza">
+            </a>
+            <a href="../img_portafolio/Lonquimay2023RetratoAJ-49.jpg" target="_blank">
+                <img src="../img_portafolio/Lonquimay2023RetratoAJ-49.jpg" alt="Viaje">
+            </a>
+
+
+        </article>
+    </section>
+
 
     <hr>
 
