--- a/pages_portafolio/viaje_a_lo_desconocido.html
+++ b/pages_portafolio/viaje_a_lo_desconocido.html
@@ -43,6 +43,17 @@
         </div>
     </main>
 
+    <section class="imagenes container">
+        <article class="bloque">
+            <a href="../img_portafolio/Lonquimay2023UVD-95.jpg" target="_blank">
+                <img src="../img_portafolio/Lonquimay2023UVD-95.jpg" alt="Naturaleza">
+            </a>
+            
+
+
+        </article>
+    </section>
+
     <hr>
 
     <footer class="footer container">
