Se agregan meta keywords a cada html y se actualiza carrousel

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  <meta name="keywords" content="Fotos destacadas, logo, portafolio, acerca de mi, contacto, naturaleza, fotos, carrusel">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   <link rel="shortcut icon" href="./img/favicon-16x16.png" type="image/x-icon">
@@ -13,8 +15,14 @@
 
 </head>
 
+<!DOCTYPE html>
+<html lang="es">
+<head>
+  <!-- Agrega tus metadatos, enlaces a hojas de estilo y otros elementos aquí -->
+</head>
 <body>
-  <!--Logo y navegación-->
+
+  <!-- Logo y navegación -->
   <header>
     <nav class="navbar navbar-expand-lg">
       <div class="container">
@@ -34,27 +42,29 @@
     </nav>
   </header>
 
-  <!--Carousel-->
-  <div id="carouselExampleInterval" class="carousel slide container mt-3" data-bs-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active" data-bs-interval="2000">
-        <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
+  <!-- Carousel -->
+  <div class="container mt-3">
+    <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active" data-bs-interval="2000">
+          <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1" >
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="./img/LosMolles68.jpg" class="d-block w-100" alt="banner 2">
+        </div>
+        <div class="carousel-item" data-bs-interval="2000">
+          <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
+        </div>
       </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="./img/LosMolles68.jpg" class="d-block w-100" alt="banner 2">
-      </div>
-      <div class="carousel-item" data-bs-interval="2000">
-        <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
-      </div>
+      <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+      </button>
+      <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+      </button>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Next</span>
-    </button>
   </div>
 
   <!--seccion main  -->
@@ -66,7 +76,7 @@
     </div>
 
     <section class="imagenes container">
-      <article class="bloque" >
+      <article class="bloque">
         <a href="./img/LosMolles4.jpg" target="_blank">
           <img src="./img/LosMolles4.jpg" alt="Naturaleza">
         </a>
