--- a/pages_portafolio/atardeceres_magicos.html
+++ b/pages_portafolio/atardeceres_magicos.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="atardeceres, fotografía, paisajes, naturaleza, viajes, magicos, colores, traquilidad">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Atardeceres_magicos</title>
+    <title>Atardeceres Mágicos - Fotografías de paisajes</title>
 </head>
 
 <body>
@@ -48,10 +50,10 @@
     <section class="imagenes container">
         <article class="bloque">
             <a href="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" target="_blank">
-                <img src="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" alt="Naturaleza">
+                <img src="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" alt="Atardecer en la ciudad">
             </a>
             <a href="../img_portafolio/ElTebo2023-21.jpg" target="_blank">
-                <img src="../img_portafolio/ElTebo2023-21.jpg" alt="Viaje">
+                <img src="../img_portafolio/ElTebo2023-21.jpg" alt="Atardecer en el Tebo">
             </a>
 
 
