--- a/pages_portafolio/colores_naturaleza.html
+++ b/pages_portafolio/colores_naturaleza.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="colores, naturaleza, fotografía, paisajes">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Colores_naturaleza</title>
+    <title>Explora los Colores de la Naturaleza - Fotografías</title>
 </head>
 
 <body>
@@ -49,10 +51,10 @@
     <section class="imagenes container">
         <article class="bloque">
             <a href="../img_portafolio/Lonquimay2023CN-22.jpg" target="_blank">
-                <img src="../img_portafolio/Lonquimay2023CN-22.jpg" alt="Naturaleza">
+                <img src="../img_portafolio/Lonquimay2023CN-22.jpg" alt="Naturaleza en Lonquimay">
             </a>
             <a href="../img_portafolio/Lonquimay2023CN-91.jpg" target="_blank">
-                <img src="../img_portafolio/Lonquimay2023CN-91.jpg" alt="Viaje">
+                <img src="../img_portafolio/Lonquimay2023CN-91.jpg" alt="Viaje en Lonquimay">
             </a>
 
 
