--- a/pages_portafolio/retratos.html
+++ b/pages_portafolio/retratos.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="retratos, fotografía, retratos humanos, retratos">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Retratos</title>
+    <title>Explora la Belleza de los Retratos - Fotografía</title>
 </head>
 
 <body>
@@ -48,10 +50,10 @@
     <section class="imagenes container">
         <article class="bloque">
             <a href="../img_portafolio/Lonquimay2023Retrato-47.jpg" target="_blank">
-                <img src="../img_portafolio/Lonquimay2023Retrato-47.jpg" alt="Naturaleza">
+                <img src="../img_portafolio/Lonquimay2023Retrato-47.jpg" alt="Retrato en Lonquimay">
             </a>
             <a href="../img_portafolio/Lonquimay2023RetratoAJ-49.jpg" target="_blank">
-                <img src="../img_portafolio/Lonquimay2023RetratoAJ-49.jpg" alt="Viaje">
+                <img src="../img_portafolio/Lonquimay2023RetratoAJ-49.jpg" alt="Retrato en Lonquimay">
             </a>
 
 
