--- a/pages_portafolio/viaje_a_lo_desconocido.html
+++ b/pages_portafolio/viaje_a_lo_desconocido.html
@@ -5,11 +5,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <meta name="keywords" content="viaje, lugares, desconocidos, naturaleza, fotografía, belleza, riqueza">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
     <link rel="shortcut icon" href="../img/favicon-16x16.png" type="image/x-icon">
     <link rel="stylesheet" href="../css/style.css">
-    <title>Viaje_a_lo_desconocido</title>
+    <title>Un Viaje a lo desconocido - Fotografías</title>
 </head>
 
 <body>
@@ -46,7 +48,7 @@
     <section class="imagenes container">
         <article class="bloque">
             <a href="../img_portafolio/Lonquimay2023UVD-95.jpg" target="_blank">
-                <img src="../img_portafolio/Lonquimay2023UVD-95.jpg" alt="Naturaleza">
+                <img src="../img_portafolio/Lonquimay2023UVD-95.jpg" alt="Explorando la naturaleza en Lonquimay 2023">
             </a>
             
 
