--- a/pages_portafolio/atardeceres_magicos.html
+++ b/pages_portafolio/atardeceres_magicos.html
@@ -57,14 +57,33 @@
 
     <section class="imagenes container">
         <article class="bloque">
-            <a href="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" target="_blank">
-                <img src="../img_portafolio/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" alt="Atardecer en la ciudad">
-            </a>
             <a href="../img_portafolio/ElTebo2023-21.jpg" target="_blank">
                 <img src="../img_portafolio/ElTebo2023-21.jpg" alt="Atardecer en el Tebo">
             </a>
-
-
+            <a href="../img_portafolio/Atardecer/Lonquimay2023-1-2.jpg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Lonquimay2023-1-2.jpg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/Lonquimay2023-1-3.jpg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Lonquimay2023-1-3.jpg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/Lonquimay2023-1-4.jpg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Lonquimay2023-1-4.jpg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/Lonquimay2023-1-5.jpg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Lonquimay2023-1-5.jpg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/Lonquimay2023-1-6.jpg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Lonquimay2023-1-6.jpg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/Lonquimay2023-1-7.jpg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Lonquimay2023-1-7.jpg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" target="_blank">
+                <img src="../img_portafolio/Atardecer/WhatsApp Image 2020-05-18 at 22.32.29.jpeg" alt="Atardecer en el Tebo">
+            </a>
+            <a href="../img_portafolio/Atardecer/Quintay.jpeg" target="_blank">
+                <img src="../img_portafolio/Atardecer/Quintay.jpeg" alt="Atardecer en la ciudad">
+            </a>
         </article>
     </section>
 
