Se camv¿bia color al boton enviar y de las redes. Se ajusta nav

--- a/index.html
+++ b/index.html
@@ -24,13 +24,6 @@
 
 </head>
 
-<!DOCTYPE html>
-<html lang="es">
-
-<head>
-  <!-- Agrega tus metadatos, enlaces a hojas de estilo y otros elementos aquí -->
-</head>
-
 <body>
 
   <!-- Logo y navegación -->
@@ -42,11 +35,11 @@
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse justify-content-md-end" id="navbarNavAltMarkup">
           <div class="navbar-nav align-items-center ">
-            <a class="nav-link active m-5" aria-current="page" href="./pages/portafolio.html">Portafolio</a>
-            <a class="nav-link active m-5" href="./pages/acerca_de_mi.html">Acerca de Mi</a>
-            <a class="nav-link active m-5" href="./pages/contacto.html">Contacto</a>
+            <a class="nav-link active m-3" aria-current="page" href="./pages/portafolio.html">Portafolio</a>
+            <a class="nav-link active m-3" href="./pages/acerca_de_mi.html">Acerca de Mi</a>
+            <a class="nav-link active m-3" href="./pages/contacto.html">Contacto</a>
           </div>
         </div>
       </div>
