--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -65,7 +65,8 @@
                 <label for="mensaje" class="form-label">Mensaje: <em>*</em></label>
                 <textarea class="form-control" id="mensaje" rows="5" required></textarea>
             </div>
-            <button type="submit" class="btn btn-primary">Enviar</button>
+            <button type="submit" class="btn btn-primary color">Enviar</button>
+
         </form>
     </div>
 
