--- a/pages/acerca_de_mi.html
+++ b/pages/acerca_de_mi.html
@@ -34,7 +34,7 @@
                     aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+                <div class="collapse navbar-collapse justify-content-md-end" id="navbarNavAltMarkup">
                     <div class="navbar-nav align-items-center">
                         <a class="nav-link active m-5" aria-current="page"
                             href="../pages/portafolio.html">Portafolio</a>
