--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -30,7 +30,7 @@
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse justify-content-md-end" id="navbarNavAltMarkup">
           <div class="navbar-nav align-items-center">
             <a class="nav-link active m-5" aria-current="page" href="../pages/portafolio.html">Portafolio</a>
             <a class="nav-link active m-5" href="../pages/acerca_de_mi.html">Acerca de Mi</a>
