--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./img/LosMolles68.jpg" class="d-block w-100" alt="banner 2">
+          <img src="./img/rami.jpeg" class="d-block w-100" alt="banner 2">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
