Se reemplazan fotos index

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./img/rami.jpeg" class="d-block w-100" alt="banner 2">
+          <img src="./img/campojavi.jpeg" class="d-block w-100" alt="banner 2">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
@@ -86,8 +86,8 @@
         <a href="./img/LosMolles4.jpg" target="_blank">
           <img src="./img/LosMolles4.jpg" alt="Naturaleza">
         </a>
-        <a href="./img/NautilusLaTravesia112.jpg" target="_blank">
-          <img src="./img/NautilusLaTravesia112.jpg" alt="Viaje">
+        <a href="./img/campojavi.jpeg" target="_blank">
+          <img src="./img/campojavi.jpeg" alt="Viaje">
         </a>
         <a class="mt-0" href="./img/LosMolles41.jpg" target="_blank">
           <img src="./img/LosMolles41.jpg" alt="Patagonía">
@@ -101,11 +101,11 @@
         <a href="./img/foto6.jpg" target="_blank">
           <img src="./img/foto6.jpg" alt="Otros">
         </a>
-        <a href="./img/LosMolles70.jpg" target="_blank">
-          <img src="./img/LosMolles70.jpg" alt="Otros">
+        <a href="./img/javi.jpeg" target="_blank">
+          <img src="./img/javi.jpeg" alt="Otros">
         </a>
-        <a href="./img/NautilusLaTravesia55.jpg" target="_blank">
-          <img src="./img/NautilusLaTravesia55.jpg" alt="Otros">
+        <a href="./img/araucaria.jpeg" target="_blank">
+          <img src="./img/araucaria.jpeg" alt="Otros">
         </a>
         <a href="./img/foto1.jpeg" target="_blank">
           <img src="./img/foto1.jpeg" alt="Otros">
