Se actualizan foto

--- a/index.html
+++ b/index.html
@@ -89,14 +89,14 @@
         <a href="./img/campojavi.jpeg" target="_blank">
           <img src="./img/campojavi.jpeg" alt="Viaje">
         </a>
-        <a class="mt-0" href="./img/LosMolles41.jpg" target="_blank">
-          <img src="./img/LosMolles41.jpg" alt="Patagonía">
+        <a class="mt-0" href="./img/rami.jpeg" target="_blank">
+          <img src="./img/rami.jpeg" alt="rami">
         </a>
         <a href="./img/foto4.jpg" target="_blank">
           <img src="./img/foto4.jpg" alt="Retrato">
         </a>
-        <a href="./img/LosMolles49.jpg" target="_blank">
-          <img src="./img/LosMolles49.jpg" alt="Mar">
+        <a href="./img/javi-mar.jpeg" target="_blank">
+          <img src="./img/javi-mar.jpeg" alt="Mar">
         </a>
         <a href="./img/foto6.jpg" target="_blank">
           <img src="./img/foto6.jpg" alt="Otros">
