--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./img/campojavi.jpeg" class="d-block w-100" alt="banner 2">
+          <img src="./img/ramiverde.jpeg" class="d-block w-100" alt="banner 2">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
@@ -87,7 +87,7 @@
           <img src="./img/LosMolles4.jpg" alt="Naturaleza">
         </a>
         <a href="./img/campojavi.jpeg" target="_blank">
-          <img src="./img/campojavi.jpeg" alt="Viaje">
+          <img src="./img/campojavi.jpeg" alt="Retrato">
         </a>
         <a class="mt-0" href="./img/rami.jpeg" target="_blank">
           <img src="./img/rami.jpeg" alt="rami">
