--- a/pages/portafolio.html
+++ b/pages/portafolio.html
@@ -30,11 +30,11 @@
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse justify-content-md-end" id="navbarNavAltMarkup">
+        <div class="collapse navbar-collapse justify-content-center" id="navbarNavAltMarkup">
           <div class="navbar-nav align-items-center">
-            <a class="nav-link active m-3" aria-current="page" href="../pages/portafolio.html">Portafolio</a>
-            <a class="nav-link active m-3" href="../pages/acerca_de_mi.html">Acerca de Mi</a>
-            <a class="nav-link active m-3" href="../pages/contacto.html">Contacto</a>
+            <a class="nav-link active m-5" aria-current="page" href="../pages/portafolio.html">Portafolio</a>
+            <a class="nav-link active m-5" href="../pages/acerca_de_mi.html">Acerca de Mi</a>
+            <a class="nav-link active m-5" href="../pages/contacto.html">Contacto</a>
           </div>
         </div>
       </div>
@@ -54,7 +54,7 @@
     <div class="galeria container justify-content-center">
       <div class="foto">
         <a href="../pages_portafolio/atardeceres_magicos.html"> 
-          <img src="../img_portafolio/Atardecer/Lonquimay2023-1-3.jpg" alt="Atardeceres magicos">
+          <img src="../img/LosMolles68.jpg" alt="Atardeceres magicos">
           <div class="overlay">
             <h3>Atardeceres Mágicos</h3>
           </div>
@@ -62,7 +62,7 @@
       </div>
       <div class="foto">
         <a href="../pages_portafolio/viaje_a_lo_desconocido.html"> 
-          <img src="../img_portafolio/Desconocido/Lonquimay2023UVD-95.jpg" alt="Un Viaje a lo Desconocido">
+          <img src="../img/LosMolles49.jpg" alt="Un Viaje a lo Desconocido">
           <div class="overlay">
             <h3>Un Viaje a lo Desconocido</h3>
           </div>
