Se actualizan paginas web para subir al servidor

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
           <img src="./img/Banner.jpeg" class="d-block w-100" alt="banner 1">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
-          <img src="./img/ramiverde.jpeg" class="d-block w-100" alt="banner 2">
+          <img src="./img/campojavi.jpeg" class="d-block w-100" alt="banner 2">
         </div>
         <div class="carousel-item" data-bs-interval="2000">
           <img src="./img/foto..jpg" class="d-block w-100" alt="banner 3">
@@ -86,14 +86,14 @@
         <a href="./img/LosMolles4.jpg" target="_blank">
           <img src="./img/LosMolles4.jpg" alt="Naturaleza">
         </a>
-        <a href="./img/campojavi.jpeg" target="_blank">
-          <img src="./img/campojavi.jpeg" alt="Retrato">
+        <a href="./img/ramiverde.jpeg" target="_blank">
+          <img src="./img/ramiverde.jpeg" alt="Retrato">
         </a>
         <a class="mt-0" href="./img/rami.jpeg" target="_blank">
           <img src="./img/rami.jpeg" alt="rami">
         </a>
-        <a href="./img/foto4.jpg" target="_blank">
-          <img src="./img/foto4.jpg" alt="Retrato">
+        <a href="./img/Lonquimay2023-89.jpg" target="_blank">
+          <img src="./img/Lonquimay2023-89.jpg" alt="Retrato">
         </a>
         <a href="./img/javi-mar.jpeg" target="_blank">
           <img src="./img/javi-mar.jpeg" alt="Mar">
